<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorLightGreen"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sentencecraft.sentencecraft.StartSentence"
    tools:showIn="@layout/activity_start_sentence">

    <TextView
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:text="@string/app_start_directions"
        android:textSize="@dimen/large_font"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:hint="@string/app_lexeme_hint"
                    android:inputType="text"/>
                <Button
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_enter" />
            </LinearLayout>

            <TableLayout android:id="@+id/start_to_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <EditText
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack"
                        android:hint="@string/app_tag_hint" />
                    <Button
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_add_tag"
                        android:onClick="addTag"/>
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="  Can't think of a word?\nHere are some samples:" />

            <TextView
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="Fish,Hi,Me,Sentence" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
